kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
   name: nexvion-service
   namespace: nexvion
spec:
  type: ClusterIP
  selector:
     app: nexvion
  ports:
   - port: 80
     targetPort: 80
